fix(styles): improve resize on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -7,5 +7,5 @@ body {
 }
 
 div.input-group>select.custom-select {
-  flex: 0 1 160px;
+  flex: 0.1 1 100px;
 }
